--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 </div>
 
 	<div class=" container-fluid btn-group-vertical">
-<a href="personas.html" type="button" class="btn btn-primary btn-lg bigbt" target="_blank" style="background-color: #ff4444;"> Personas</a>
-<a href="systemmodel_IA.html" type="button" class="btn btn-primary btn-lg bigbt" target="_blank" style="background-color: #ff4444;">System Diagram & Information Architecture</a>
-<a href="lofi.html" type="button" class="btn btn-primary btn-lg bigbt" target="_blank" style="background-color: #ff4444;">Low Fidelity Wireframes</a>
-<a href="mockup.html" type="button" class="btn btn-primary btn-lg bigbt" target="_blank" style="background-color: #ff4444;">Mockups</a>
-<a href="appendix.html" type="button" class="btn btn-primary btn-lg bigbt" target="_blank" style="background-color: #ff4444;">Appendix</a>
+<a href="personas.html" type="button" class="btn btn-primary bigbt btn-lg" target="_blank" style="background-color: #ff4444;"> Personas</a>
+<a href="systemmodel_IA.html" type="button" class="btn btn-primary  bigbt btn-lg" target="_blank" style="background-color: #ff4444;">System Diagram & Information Architecture</a>
+<a href="lofi.html" type="button" class="btn btn-primary bigbt btn-lg" target="_blank" style="background-color: #ff4444;">Low Fidelity Wireframes</a>
+<a href="mockup.html" type="button" class="btn btn-primary  bigbt btn-lg" target="_blank" style="background-color: #ff4444;">Mockups</a>
+<a href="appendix.html" type="button" class="btn btn-primary bigbt btn-lg" target="_blank" style="background-color: #ff4444;">Appendix</a>
 	</div>
 
 	<div class="container-fluid">
