--- a/mockup.html
+++ b/mockup.html
@@ -20,12 +20,12 @@
 
 	<div class="container-fluid">
 		<img src="images/Title3.jpg" alt="Title">
-		<img class = "main" src="images/mockup1.jpg" alt="Mockups">
-		<img class = "main" src="images/mockup2.jpg" alt="Mockups">
-		<img class = "main" src="images/mockup3.jpg" alt="Mockups">
-		<img class = "main" src="images/mockup4.jpg" alt="Mockups">
-		<img class = "main" src="images/mockup4-1.jpg" alt="Mockups">
-		<img class = "main" src="images/mockup5.jpg" alt="Mockups">
+		<img class = "main" src="images/Mockup1.jpg" alt="Mockups">
+		<img class = "main" src="images/Mockup2.jpg" alt="Mockups">
+		<img class = "main" src="images/Mockup3.jpg" alt="Mockups">
+		<img class = "main" src="images/Mockup4.jpg" alt="Mockups">
+		<img class = "main" src="images/Mockup4-1.jpg" alt="Mockups">
+		<img class = "main" src="images/Mockup5.jpg" alt="Mockups">
 	</div>
 
 	<div class="container-fluid">
