--- a/systemmodel_IA.html
+++ b/systemmodel_IA.html
@@ -26,7 +26,7 @@
 	</div>
 
 	<div class="container-fluid">
-	<img src="images/project.jpg">
+	<img class = "main" src="images/project.jpg">
 </div>
 </body>
 </html>
