--- a/mockup.html
+++ b/mockup.html
@@ -29,7 +29,7 @@
 	</div>
 
 	<div class="container-fluid">
-	<img src="images/project.jpg">
+	<img class = "main" src="images/project.jpg">
 </div>
 </body>
 </html>
