--- a/appendix.html
+++ b/appendix.html
@@ -43,7 +43,7 @@
 	</div>
 
 	<div class="container-fluid">
-	<img src="images/project.jpg">
+	<img class = "main" src="images/project.jpg">
 </div>
 </body>
 </html>
