--- a/personas.html
+++ b/personas.html
@@ -19,7 +19,7 @@
 	<p class="content">This Page contains the extras, check out the main project on <span><a href="https://www.behance.net/gallery/112372639/Meally-Food-Ordering-Experience-for-Hearing-Impaired">Behance!</a></span></p>s
 
 	<div class="container-fluid">
-		<img src="images/title.jpg" alt="Title">
+		<img class = "main" src="images/title.jpg" alt="Title">
 		<img class = "main" src="images/persona1.jpg" alt="Persona 1">
 		<img class = "main" src="images/persona2.jpg" alt="Persona 2">
 		<img class = "main" src="images/persona3.jpg" alt="Persona 3">
