--- a/systemmodel_IA.html
+++ b/systemmodel_IA.html
@@ -19,7 +19,7 @@
 	<p class="content">This Page contains the extras, check out the main project on <span><a href="https://www.behance.net/gallery/112372639/Meally-Food-Ordering-Experience-for-Hearing-Impaired">Behance!</a></span></p>
 
 	<div class="container-fluid">
-		<img src="images/Title2.jpg" alt="Title">
+		<img class = "main" src="images/Title2.jpg" alt="Title">
 		<img class = "main" src="images/Restaurant_Model.jpg" alt="Restaurant Model System Diagram">
 		<img class = "main" src="images/Food_Court.jpg" alt="Food Court Model System Diagram">
 		<img class = "main" src="images/Information_Architecture.jpg" alt="Information Architecture">
