--- a/mockup.html
+++ b/mockup.html
@@ -19,7 +19,7 @@
 	<p class="content">This Page contains the extras, check out the main project on <span><a href="https://www.behance.net/gallery/112372639/Meally-Food-Ordering-Experience-for-Hearing-Impaired">Behance!</a></span></p>
 
 	<div class="container-fluid">
-		<img src="images/Title3.jpg" alt="Title">
+		<img class = "main" src="images/Title3.jpg" alt="Title">
 		<img class = "main" src="images/Mockup1.jpg" alt="Mockups">
 		<img class = "main" src="images/Mockup2.jpg" alt="Mockups">
 		<img class = "main" src="images/Mockup3.jpg" alt="Mockups">
