--- a/lofi.html
+++ b/lofi.html
@@ -19,7 +19,7 @@
 	<p class="content">This Page contains the extras, check out the main project on <span><a href="https://www.behance.net/gallery/112372639/Meally-Food-Ordering-Experience-for-Hearing-Impaired">Behance!</a></span></p>
 
 	<div class="container-fluid">
-		<img src="images/lofit.jpg" alt="Title">
+		<img class = "main" src="images/lofit.jpg" alt="Title">
 		<img class = "main" src="images/lofi.jpg" alt="Low Fidelity Wireframes">
 	</div>
 
